<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.com.neil.youarethevoter.MainActivity"
    android:background="@drawable/bg_gradient">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="45%"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />

    <TextView android:id="@+id/tvText1"
        android:text="@string/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        app:layout_widthPercent="55%"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView android:id="@+id/tvText2"
        android:text="@string/text2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvText1"
        app:layout_widthPercent="75%"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="11sp"/>

    <Button android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_widthPercent="50%"
        android:background="#f6b221"
        android:layout_alignParentBottom="true"
        android:onClick="clickLogin"/>

    <Button android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_toRightOf="@+id/login"
        app:layout_widthPercent="50%"
        android:background="#2b7de3"
        android:layout_alignParentBottom="true"
        android:onClick="clickRegister"/>
</android.support.percent.PercentRelativeLayout>
