<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context="app.com.neil.youarethevoter.MainActivity">

    <TextView android:id="@+id/tvAccountSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"
        app:layout_marginTopPercent="20%"
        android:layout_centerHorizontal="true"
        android:text="@string/accountsetting"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="15px"
        android:background="@drawable/textviewbg"
        android:onClick="clickEvent"/>

    <TextView android:id="@+id/tvUpdateInterestGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"
        app:layout_marginTopPercent="5%"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvAccountSettings"
        android:text="@string/interestgroupsetting"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="15px"
        android:background="@drawable/textviewbg"
        android:onClick="clickEvent"/>

    <TextView android:id="@+id/tvTermsConditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"
        app:layout_marginTopPercent="5%"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvUpdateInterestGroup"
        android:text="@string/termssetting"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="15px"
        android:background="@drawable/textviewbg"
        android:onClick="clickEvent"/>

    <TextView android:id="@+id/tvLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"
        app:layout_marginTopPercent="5%"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvTermsConditions"
        android:text="@string/logout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="15px"
        android:background="@drawable/textviewbg"
        android:onClick="clickEvent"/>
</android.support.percent.PercentRelativeLayout>
