<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.com.neil.youarethevoter.MainActivity">

    <ImageView android:id="@+id/ivRegisterLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="20%"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo" />

    <TextView android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ivRegisterLogo"
        android:text="@string/fullname"
        android:textSize="10sp"
        android:textStyle="bold"/>

    <EditText android:id="@+id/etName"
        android:layout_below="@+id/tvName"
        android:inputType="text"
        app:layout_widthPercent="80%"
        app:layout_heightPercent="7%"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="10dp"
        android:background="@drawable/editviewbg"/>

    <TextView android:id="@+id/tvDOB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="25%"
        android:layout_below="@+id/etName"
        android:text="@string/dob"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_alignStart="@+id/tvName"/>

    <EditText android:id="@+id/etDOB"
        android:layout_below="@+id/tvDOB"
        android:inputType="text"
        app:layout_widthPercent="25%"
        app:layout_heightPercent="7%"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/editviewbg"
        android:layout_alignStart="@+id/tvName"
        android:hint="@string/dob_hint"
        android:textSize="12sp"
        android:textAlignment="center"/>

    <TextView android:id="@+id/tvLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="50%"
        android:layout_below="@+id/etName"
        android:text="@string/location"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_alignEnd="@+id/tvName"/>

    <Spinner android:id="@+id/spinnerLocationLabel"
        android:entries="@array/country_label"
        app:layout_widthPercent="50%"
        app:layout_heightPercent="7%"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/tvLocation"
        android:layout_alignEnd="@+id/tvName"
        android:background="@drawable/editviewbg"
        android:spinnerMode="dropdown"
        android:visibility="invisible"/>
    <Spinner android:id="@+id/spinnerLocation"
        android:entries="@array/country_arrays"
        app:layout_widthPercent="50%"
        app:layout_heightPercent="7%"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/tvLocation"
        android:layout_alignEnd="@+id/tvName"
        android:background="@drawable/editviewbg"
        android:spinnerMode="dropdown"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinnerLocation"
        android:layout_alignBottom="@+id/spinnerLocation"
        android:layout_alignRight="@id/spinnerLocation"
        android:layout_marginRight="10dp"
        android:src="@drawable/downarrow_icon"/>

    <TextView android:id="@+id/tvEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etDOB"
        android:text="@string/emailaddress"
        android:textSize="10sp"
        android:textStyle="bold"/>

    <EditText android:id="@+id/etEmail"
        android:layout_below="@+id/tvEmailAddress"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        app:layout_widthPercent="80%"
        app:layout_heightPercent="7%"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="10dp"
        android:background="@drawable/editviewbg"/>

    <ImageView android:id="@+id/ivRighttickicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etEmail"
        android:layout_alignBottom="@+id/etEmail"
        android:layout_alignRight="@id/etEmail"
        android:layout_marginRight="10dp"
        android:src="@drawable/righttick_icons"
        android:visibility="invisible"/>

    <TextView android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        app:layout_widthPercent="80%"
        android:layout_centerHorizontal="true"
        android:text="@string/password"
        android:textSize="10sp"
        android:textStyle="bold"/>

    <EditText android:id="@+id/etPassword"
        android:layout_below="@+id/tvPassword"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="80%"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:background="@drawable/editviewbg"/>

    <ImageView android:id="@+id/ivhidepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etPassword"
        android:layout_alignBottom="@+id/etPassword"
        android:layout_alignRight="@id/etPassword"
        android:layout_marginRight="10dp"
        android:src="@drawable/hidepasswordicon"/>
    <ImageView android:id="@+id/ivshowpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etPassword"
        android:layout_alignBottom="@+id/etPassword"
        android:layout_alignRight="@id/etPassword"
        android:layout_marginRight="10dp"
        android:src="@drawable/showpasswordicon"
        android:visibility="invisible"/>

    <TextView android:id="@+id/tvText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        app:layout_widthPercent="80%"
        android:layout_centerHorizontal="true"
        android:text="@string/text3"
        android:layout_marginBottom="20dp"
        android:textSize="8sp"/>

    <Button android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"
        android:layout_centerHorizontal="true"
        android:text="@string/register2"
        android:layout_below="@+id/tvText3"
        android:background="#2b7de3"/>

    <TextView android:id="@+id/tvSignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/clickheretext"/>
</android.support.percent.PercentRelativeLayout>
