<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.com.neil.youarethevoter.MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="20%"
        android:layout_marginTop="2dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/tvSpace"
        app:layout_heightPercent="20%"
        android:layout_below="@+id/ivLogo"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvUsername"
        app:layout_widthPercent="75%"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvSpace"
        android:text="@string/username"/>

    <EditText android:id="@+id/etEmailLogin"
        android:layout_below="@+id/tvUsername"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        app:layout_widthPercent="75%"
        app:layout_heightPercent="8%"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/editviewbg"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etEmailLogin"
        android:layout_alignBottom="@+id/etEmailLogin"
        android:layout_alignRight="@id/etEmailLogin"
        android:layout_marginRight="10dp"
        android:src="@drawable/righttick_icons"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailLogin"
        android:id="@+id/tvPassword"
        app:layout_widthPercent="75%"
        android:layout_centerHorizontal="true"
        android:text="@string/password"/>

    <EditText android:id="@+id/etPasswordLogin"
        android:layout_below="@+id/tvPassword"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        app:layout_heightPercent="8%"
        app:layout_widthPercent="75%"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:paddingLeft="10dp"
        android:background="@drawable/editviewbg"/>

    <ImageView android:id="@+id/ivHidePasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etPasswordLogin"
        android:layout_alignBottom="@+id/etPasswordLogin"
        android:layout_alignRight="@id/etPasswordLogin"
        android:layout_marginRight="10dp"
        android:src="@drawable/hidepasswordicon"/>
    <ImageView android:id="@+id/ivShowPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etPasswordLogin"
        android:layout_alignBottom="@+id/etPasswordLogin"
        android:layout_alignRight="@id/etPasswordLogin"
        android:layout_marginRight="10dp"
        android:src="@drawable/showpasswordicon"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="75%"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:layout_below="@+id/etPasswordLogin"
        android:background="#f6b221"
        android:onClick="clickLoginButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/tvSignUpText"
        android:text="@string/registerText"/>
</android.support.percent.PercentRelativeLayout>
